syntax = "proto3";

package connect;
option go_package = "./;pb";



message Connection{
  string  ClientId =1;
  bool    Oauth=2;
  string  Token=3;
  string  Key=4;

}